// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualizationCreator disables all select and input fields when busy 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={true}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={true}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={true}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator disables all select and input fields when busy and outputSuggestions are provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={true}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={9}
    >
      <Component
        disabled={true}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={3}
    >
      <Component
        disabled={true}
        label="Outputs"
        onChange={[Function]}
        select={true}
        value=""
        variant="outlined"
      >
        <WithStyles(MenuItem)
          key="0"
          value="gs://ml-pipeline/table.csv"
        >
          gs://ml-pipeline/table.csv
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="gs://ml-pipeline/roc.csv"
        >
          gs://ml-pipeline/roc.csv
        </WithStyles(MenuItem)>
      </Component>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={true}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator does not render component when no config is provided 1`] = `""`;

exports[`VisualizationCreator renders an output select input field when outputSuggestions are specified 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={9}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={3}
    >
      <Component
        disabled={false}
        label="Outputs"
        onChange={[Function]}
        select={true}
        value=""
        variant="outlined"
      >
        <WithStyles(MenuItem)
          key="0"
          value="gs://ml-pipeline/table.csv"
        >
          gs://ml-pipeline/table.csv
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="gs://ml-pipeline/roc.csv"
        >
          gs://ml-pipeline/roc.csv
        </WithStyles(MenuItem)>
      </Component>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders component when all parameters in config are provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders component when empty config is provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders component when isBusy is not provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders component when onGenerate is not provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders component when outputSuggestions is not provided 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders the provided arguments correctly 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders the provided source correctly 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value="gs://ml-pipeline/data.csv"
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;

exports[`VisualizationCreator renders the selected visualization type correctly 1`] = `
<div
  style={
    Object {
      "width": 600,
    }
  }
>
  <WithStyles(FormControl)
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(WithFormControlContext(InputLabel))
      htmlFor="visualization-type-selector"
      required={true}
    >
      Type
    </WithStyles(WithFormControlContext(InputLabel))>
    <WithStyles(WithFormControlContext(Select))
      disabled={false}
      inputProps={
        Object {
          "id": "visualization-type-selector",
          "name": "Visualization Type",
        }
      }
      onChange={[Function]}
      style={
        Object {
          "minHeight": 60,
          "width": "100%",
        }
      }
      value="ROC_CURVE"
    >
      <WithStyles(MenuItem)
        key="ROCCURVE"
        value="ROC_CURVE"
      >
        ROC_CURVE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TFDV"
        value="TFDV"
      >
        TFDV
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="TABLE"
        value="TABLE"
      >
        TABLE
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="CUSTOM"
        value="CUSTOM"
      >
        CUSTOM
      </WithStyles(MenuItem)>
    </WithStyles(WithFormControlContext(Select))>
  </WithStyles(FormControl)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        disabled={false}
        label="Source"
        onChange={[Function]}
        placeholder="File path or path pattern of data within GCS."
        required={true}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <div>
    <WithStyles(WithFormControlContext(InputLabel))>
      Arguments (Optional)
    </WithStyles(WithFormControlContext(InputLabel))>
    <Editor
      cursorStart={1}
      editorProps={
        Object {
          "$blockScrolling": true,
        }
      }
      enableBasicAutocompletion={false}
      enableLiveAutocompletion={false}
      enableSnippets={false}
      focus={false}
      fontSize={12}
      height="112px"
      highlightActiveLine={true}
      maxLines={null}
      minLines={null}
      mode="json"
      name="brace-editor"
      navigateToFileEnd={true}
      onChange={[Function]}
      onLoad={null}
      onPaste={null}
      onScroll={null}
      placeholder="{<br>        &nbsp&nbsp&nbsp&nbsp\\"y_true\\": array,<br>        &nbsp&nbsp&nbsp&nbsp\\"y_score\\": array,<br>        &nbsp&nbsp&nbsp&nbsp\\"pos_label\\": number | string | null,<br>        &nbsp&nbsp&nbsp&nbsp\\"sample_weight\\": array | null,<br>        &nbsp&nbsp&nbsp&nbsp\\"drop_intermediate\\": boolean | null,<br>        &nbsp&nbsp&nbsp&nbsp\\"is_generated\\": boolean | null,<br>        }"
      readOnly={false}
      scrollMargin={
        Array [
          0,
          0,
          0,
          0,
        ]
      }
      setOptions={Object {}}
      showGutter={true}
      showPrintMargin={true}
      style={Object {}}
      tabSize={4}
      theme="github"
      value=""
      width="100%"
      wrapEnabled={false}
    />
  </div>
  <BusyButton
    busy={false}
    disabled={true}
    onClick={[Function]}
    title="Generate Visualization"
  />
</div>
`;
